--- a/BLAZAM/Pages/Error/403.razor
+++ b/BLAZAM/Pages/Error/403.razor
@@ -1,4 +1,4 @@
-﻿@inherits AppComponent
+﻿@inherits AppComponentBase
 
 <Div Margin="Margin.IsAuto" Width=Width.Is100 Height=Height.Is100 TextAlignment="TextAlignment.Center" Display="Display.Table">
     <Div Display="Display.TableCell" VerticalAlignment="VerticalAlignment.Middle">
