--- a/BLAZAM/Pages/Install/Install.razor
+++ b/BLAZAM/Pages/Install/Install.razor
@@ -5,7 +5,7 @@
 @using BLAZAM.Common.Data.ActiveDirectory.Interfaces;
 @using BLAZAM.Server.Data.Services.Email;
 @layout InstallLayout
-@inherits AppComponent
+@inherits AppComponentBase
 Test
 @if (ErrorMessage !=null){
     <Card>
