--- a/BLAZAM/Pages/Install/InstallDatabase.razor
+++ b/BLAZAM/Pages/Install/InstallDatabase.razor
@@ -1,6 +1,6 @@
 @using Microsoft.EntityFrameworkCore
 @layout InstallLayout
-@inherits AppComponent
+@inherits AppComponentBase
 @{
     string connString;
 
