--- a/BLAZAM/Pages/Install/NewInstall.razor
+++ b/BLAZAM/Pages/Install/NewInstall.razor
@@ -1,6 +1,6 @@
 ﻿@page "/install"
 @layout MinLayout
-@inherits AppComponent
+@inherits AppComponentBase
 @inject IDbContextFactory<DatabaseContext> dbFactory
 
 
