--- a/BLAZAM/Shared/Layouts/AppFooter.razor
+++ b/BLAZAM/Shared/Layouts/AppFooter.razor
@@ -1,4 +1,4 @@
-@inherits AppComponent
+@inherits AppComponentBase
 <Div Padding="Padding.Is3.OnX">
     @if (Monitor.DirectoryConnected == ConnectionState.Connecting)
     {
