--- a/BLAZAM/Shared/Navs/DevTools.razor
+++ b/BLAZAM/Shared/Navs/DevTools.razor
@@ -1,4 +1,4 @@
-@inherits AppComponent
+@inherits AppComponentBase
 @inject IHttpContextAccessor ca
 <Accordion Border=Border.Is0.RoundedZero>
     <Collapse Border=Border.Is0.RoundedZero Visible="@collapseVisible">
