--- a/BLAZAM/Shared/Navs/NavMenu.razor
+++ b/BLAZAM/Shared/Navs/NavMenu.razor
@@ -3,7 +3,7 @@
 @using Microsoft.Extensions.Localization;
 @using BLAZAM.Common.Data.ActiveDirectory.Interfaces;
 @using BLAZAM.Server.Data.Services.Email;
-@inherits AppComponent
+@inherits AppComponentBase
 @{
 
 }
