--- a/BLAZAM/Shared/UI/Inputs/ADUserAutoComplete.razor
+++ b/BLAZAM/Shared/UI/Inputs/ADUserAutoComplete.razor
@@ -1,4 +1,4 @@
-﻿@inherits AutoCompleteComponent
+﻿@inherits AutoCompleteComponentBase
 <Row>
     <Column ColumnSize="ColumnSize.Is8.OnTablet" Height="Height.Is100" Margin="Margin.IsAuto.OnY">
         <Autocomplete TItem="IADUser"
