--- a/BLAZAM/Shared/UI/OU/OUTreeView.razor
+++ b/BLAZAM/Shared/UI/OU/OUTreeView.razor
@@ -1,4 +1,4 @@
-﻿@inherits AppComponent
+﻿@inherits AppComponentBase
 <LoadingIndicator Visible=LoadingData>
         @if (RootOU != null && RootOU.Any())
         {
