--- a/BLAZAM/Shared/UI/ScheduledUpdateAnnouncer.razor
+++ b/BLAZAM/Shared/UI/ScheduledUpdateAnnouncer.razor
@@ -1,4 +1,4 @@
-@inherits AppComponent
+@inherits AppComponentBase
 
 @if (SchedueledUpdateTime != null && SchedueledUpdateTime != DateTime.MinValue)
 {
