--- a/BLAZAM/Shared/UI/Settings/Permissions/ImpersonateUser.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/ImpersonateUser.razor
@@ -1,4 +1,4 @@
-﻿@inherits AppComponent
+﻿@inherits AppComponentBase
 @inject AppAuthenticationStateProvider appAuth
 <h3>ImpersonateUser</h3>
 <ADUserAutoComplete @bind-SelectedUser=User/>
