--- a/BLAZAM/Pages/Home.razor
+++ b/BLAZAM/Pages/Home.razor
@@ -1,5 +1,5 @@
 ﻿@attribute [Authorize]
-@inherits AppComponent
+@inherits AppComponentBase
 @page "/Home"
 @using BLAZAM.Server.Shared.UI.Dashboard.Widgets;
 @using BLAZAM.Common.Data.ActiveDirectory.Interfaces;
