--- a/BLAZAM/Pages/Install/ADirectory.razor
+++ b/BLAZAM/Pages/Install/ADirectory.razor
@@ -1,6 +1,6 @@
 @page "/install/directory"
 @layout InstallLayout
-@inherits AppComponent
+@inherits AppComponentBase
 @inject NavigationManager Nav;
 @{
 }
