--- a/BLAZAM/Pages/OU/CreateOU.razor
+++ b/BLAZAM/Pages/OU/CreateOU.razor
@@ -1,5 +1,5 @@
 ﻿@page "/ou/create"
-@inherits AppComponent
+@inherits AppComponentBase
 @attribute [Authorize]
 <Row>
     <Steps @ref=Steps NavigationAllowed=AllowStep SelectedStep="@selectedStep" SelectedStepChanged="@OnSelectedStepChanged">
