--- a/BLAZAM/Shared/UI/Inputs/ADComputerAutoComplete.razor
+++ b/BLAZAM/Shared/UI/Inputs/ADComputerAutoComplete.razor
@@ -1,5 +1,5 @@
 ﻿@namespace BLAZAM.Server.Shared.UI
-@inherits AutoCompleteComponent
+@inherits AutoCompleteComponentBase
 <Autocomplete TItem="IADComputer"
               TValue="IADComputer"
               Data="@Computers"
