--- a/BLAZAM/Shared/UI/Inputs/ADGroupAutoComplete.razor
+++ b/BLAZAM/Shared/UI/Inputs/ADGroupAutoComplete.razor
@@ -1,5 +1,5 @@
 ﻿@namespace BLAZAM.Server.Shared.UI
-@inherits AutoCompleteComponent
+@inherits AutoCompleteComponentBase
 
 
 <Autocomplete TItem="IADGroup"
