--- a/BLAZAM/Shared/UI/SearchPageHeader.razor
+++ b/BLAZAM/Shared/UI/SearchPageHeader.razor
@@ -13,8 +13,12 @@
             <Row Style="font-size:0.8em;">
                 <Column Style="align-self: center;" ColumnSize="ColumnSize.Is2.OnFullHD.Is2.OnDesktop.Is3.OnTablet">
                     <Div TextOverflow="TextOverflow.Wrap">
-                        @Text
-
+                        <Text Display="Display.InlineBlock">@Text</Text>
+                        <Div Display="Display.InlineBlock">
+                            <DropdownList Color=Color.Primary @bind-SelectedValue=@SelectedObjectType TItem="ActiveDirectoryObjectType?" TValue=ActiveDirectoryObjectType? TextField="item=>item.ToString()" ValueField="item=>item" Data="ObjectTypes">
+                                @SelectedObjectType
+                            </DropdownList>
+                        </Div>
                     </Div>
 
                 </Column>
@@ -47,6 +51,7 @@
 </Form>
 
 @code {
+    List<ActiveDirectoryObjectType?> ObjectTypes = new List<ActiveDirectoryObjectType?> { ActiveDirectoryObjectType.All, ActiveDirectoryObjectType.User, ActiveDirectoryObjectType.Group, ActiveDirectoryObjectType.OU, ActiveDirectoryObjectType.Computer };
     [Parameter]
     public RenderFragment ChildContent { get; set; }
 
@@ -54,16 +59,19 @@
     public ADSearch Searcher { get; set; }
 
     [Parameter]
-    public EventCallback OnSubmit { get; set;}
+    public EventCallback OnSubmit { get; set; }
 
     [Parameter]
     public string Text { get; set; }
 
     bool disableCancel = false;
 
+    ActiveDirectoryObjectType? SelectedObjectType;
+
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
+
         Searcher.ResultsCollected += ((batch) => { InvokeAsync(StateHasChanged); });
         Searcher.OnSearchCompleted += (() =>
         {
