--- a/BLAZAM/Shared/UI/Settings/ActiveDirectoryStatusPanel.razor
+++ b/BLAZAM/Shared/UI/Settings/ActiveDirectoryStatusPanel.razor
@@ -1,5 +1,5 @@
 ﻿@using System.DirectoryServices;
-@inherits AppComponent
+@inherits AppComponentBase
 <Card>
     <CardHeader>
         Active Directory Connection Status
