--- a/BLAZAM/Shared/UI/Settings/Permissions/PrivilegeLevelEditor.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/PrivilegeLevelEditor.razor
@@ -2,7 +2,7 @@
 @using BLAZAM.Common.Data.ActiveDirectory.Interfaces;
 @using BLAZAM.Server.Data.Services.Email;
 
-@inherits AppComponent
+@inherits AppComponentBase
 <h3>User Groups</h3>
     <LoadingIndicator Visible=LoadingData>
         <p> Only users in the following Active Directory groups (or nested groups) will be allowed to log in to the applicaiton.</p>
