--- a/BLAZAM/Shared/UI/SearchPageHeader.razor
+++ b/BLAZAM/Shared/UI/SearchPageHeader.razor
@@ -13,7 +13,7 @@
             <Row Style="font-size:0.8em;">
                 <Column Style="align-self: center;" ColumnSize="ColumnSize.Is2.OnFullHD.Is2.OnDesktop.Is3.OnTablet">
                     <Div TextOverflow="TextOverflow.Wrap">
-                        <Text Display="Display.InlineBlock">@Text</Text>
+                        <Div Display="Display.InlineBlock">@Text</Div>
                         <Div Display="Display.InlineBlock">
                             <DropdownList Color=Color.Primary @bind-SelectedValue=@SelectedObjectType TItem="ActiveDirectoryObjectType?" TValue=ActiveDirectoryObjectType? TextField="item=>item.ToString()" ValueField="item=>item" Data="ObjectTypes">
                                 @SelectedObjectType
