--- a/BLAZAM/Shared/Layouts/MainLayout.razor
+++ b/BLAZAM/Shared/Layouts/MainLayout.razor
@@ -5,8 +5,9 @@
 @using BLAZAM.Server.Errors.Database;
 @using Microsoft.EntityFrameworkCore
 @using System.DirectoryServices
-@inject NavigationManager NavManager
+@inject NavigationManager Nav
 @inject IActiveDirectory directory
+@inject IApplicationUserStateService UserStateService
 @inject IDbContextFactory<DatabaseContext> DbFactory
 @inject ConnMonitor monitor
 <PageTitle>BLAZAM</PageTitle>
@@ -29,6 +30,16 @@
                         @setHeader.ChildContent
 
                     }
+                    else
+                    {
+                        <CascadingValue Value="SearchTerm">
+                            <CascadingValue Value="this">
+                                <SearchPageHeader OnSubmit=SubmitSearch Text="Search">
+                                    <ADAutoComplete @bind-SearchTerm="@SearchTerm" @bind-SearchDisabled=@SearchDisabledObjects />
+                                </SearchPageHeader>
+                            </CascadingValue>
+                        </CascadingValue>
+                    }
                     @if (setSubHeader != null)
                     {
                         @setSubHeader.ChildContent
@@ -36,11 +47,11 @@
                     }
                 </LayoutHeader>
                 <LayoutContent Style="height: 100vh;overflow: auto;">
- 
-                            <CascadingValue Value="this">
-                                @Body
-                            </CascadingValue>
-           
+
+                    <CascadingValue Value="this">
+                        @Body
+                    </CascadingValue>
+
                 </LayoutContent>
                 <LayoutFooter>
                     <AppFooter />
@@ -67,6 +78,25 @@
 
 </Layout>
 @code {
+    string _searchTerm;
+    /// <summary>
+    /// The search term that comes from the search text box
+    /// </summary>
+    public string? SearchTerm { get=>_searchTerm; set
+        {
+            if (_searchTerm == value) return;
+            _searchTerm = value;
+            InvokeAsync(StateHasChanged);
+        }
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await base.OnInitializedAsync();
+        SearchDisabledObjects = UserStateService?.CurrentUserState?.UserSettings?.SearchDisabledUsers == true;
+
+    }
+
     SetHeader? setHeader;
     public void SetHeader(SetHeader? setHeader)
     {
@@ -92,6 +122,35 @@
     }
 
     public void Update() => StateHasChanged();
+    public async Task SubmitSearch() => await SubmitSearch(null);
+    public async Task SubmitSearch(string? searchTerm = null)
+    {
+        if (searchTerm != null)
+            SearchTerm = searchTerm;
 
+
+        Nav.NavigateTo("/search/" + SearchTerm);
+
+
+        //Search();
+
+        InvokeAsync(StateHasChanged);
+    }
+
+    bool _searchDisabledObjects;
+    /// <summary>
+    /// Indicates whether to search for disabled
+    /// Active Diretory Entries
+    /// </summary>
+    public bool SearchDisabledObjects
+    {
+        get => _searchDisabledObjects; set
+        {
+            if (_searchDisabledObjects == value) return;
+            _searchDisabledObjects = value;
+            InvokeAsync(StateHasChanged);
+
+        }
+    }
 
 }
