--- a/BLAZAM/Shared/UI/SearchPageHeader.razor
+++ b/BLAZAM/Shared/UI/SearchPageHeader.razor
@@ -4,10 +4,10 @@
          CollapseMode="BarCollapseMode.Small"
          Breakpoint="Breakpoint.Desktop"
          NavigationBreakpoint="Breakpoint.Tablet"
-         ThemeContrast="ThemeContrast.Dark"
+         ThemeContrast="ThemeContrast.Light"
          Padding="Padding.Is2.OnX"
-         Background="Background.Dark"
-         TextColor="TextColor.Light"
+         Background="Background.Secondary"
+         TextColor="TextColor.Dark"
          VerticalAlignment="VerticalAlignment.Middle">
         <BarBrand Padding=Padding.Is0.OnY Width="Width.Is100">
             <Row Style="font-size:0.8em;">
@@ -56,7 +56,7 @@
     public RenderFragment ChildContent { get; set; }
 
     [CascadingParameter]
-    public ADSearch Searcher { get; set; }
+    public ADSearch Searcher { get; set; } = new ADSearch();
 
     [Parameter]
     public EventCallback OnSubmit { get; set; }
