Fixes for no oops message when database unreachable

--- a/BLAZAM/Pages/Install/InstallDatabase.razor
+++ b/BLAZAM/Pages/Install/InstallDatabase.razor
@@ -65,7 +65,7 @@ else
 
             progressValue = null;
             await InvokeAsync(StateHasChanged);
-            if (Program.ApplyDatabaseMigrations())
+            if (await Program.ApplyDatabaseMigrations())
             {
                 Completed = true;
                 InvokeAsync(StepCompleted.InvokeAsync);
