--- a/BLAZAM/Shared/UI/Settings/ManualApplicationUpdater.razor
+++ b/BLAZAM/Shared/UI/Settings/ManualApplicationUpdater.razor
@@ -210,7 +210,7 @@ else
         {
 
             await InvokeAsync(StateHasChanged);
-            if (Program.ApplyDatabaseMigrations())
+            if (await Program.ApplyDatabaseMigrations())
             {
             }
 
