--- a/BLAZAM/Shared/Layouts/MainLayout.razor
+++ b/BLAZAM/Shared/Layouts/MainLayout.razor
@@ -33,7 +33,7 @@
                     else
                     {
                             <CascadingValue Value="this">
-                                <SearchPageHeader Text="Search"/>
+                                <SearchPageHeader @bind-SearchDisabledObjects=SearchDisabledObjects Text="Search"/>
                             </CascadingValue>
                     }
                     @if (setSubHeader != null)
